--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/normalize.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+	
+	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.js"></script>
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<title>Christopher Crookes - Vancouver Based Web App Developer</title>
 </head>
 <body ng-app='app'>
@@ -8,36 +23,10 @@
 		<h1>Christopher Crookes</h1>
 		<p>Vancouver Based Web App Developer</p>
 	</header>
-	<div ng-controller="ContactController">
-		<form ng-submit="submit(contactform)" name="contactform">
-			<div ng-class="{ 'has-error': contactform.inputname.$invalid && submitted }">
-				<label for="inputName">Name</label>
-				<input ng-model="formData.inputName" type="text" id="inputName" name="inputName" placeholder="Please enter your name" required>
-			</div>
-			<div ng-class="{ 'has-error': contactform.inputEmail.$invalid && submitted }">
-				<label for="inputEmail">Email</label>
-				<input ng-model="formData.inputEmail" type="email" id="inputEmail" name="inputEmail" placeholder="Please enter your email address" required>
-			</div>
-			<div ng-class="{ 'has-error': contactform.inputSubject.$invalid && submitted }">
-				<label for="inputSubject">Subject</label>
-				<input ng-model="formData.inputSubject" type="text" id="inputSubject" name="inputSubject" placeholder="Email Subject" required>
-			</div>
-			<div ng-class="{ 'has-error': contactform.inputMessage.$invalid && submitted }">
-				<label for="inputMessage">Message</label>
-				<textarea ng-model="formData.inputMessage" type="text" id="inputMessage" name="inputMessage" placeholder="Please enter your message..." required></textarea>
-			</div>
-			<div>
-				<button type="submit" ng-disabled="submitButtonDisabled">
-					Send Mail
-				</button>
-			</div>
+	<div ng-view>
 
-		</form>
-		<p ng-class="result">{{ resultMessage }}</p>
 	</div>
-
 	
-	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
 	<script src='/app.js'></script>
 </body>
 </html>
