Adding navigation panel directive. Placing navigation on all views

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 <div class='container'>
+	<nav-panel></nav-panel>
 	<form ng-submit="submit(contactform)" name="contactform">
 		<div ng-class="{ 'has-error': contactform.inputname.$invalid && submitted }">
 			<label for="inputName">Name</label>
