--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,5 @@
 <div class='container'>
-	<div class='close-page'>
-		<a href='/#/'>X</a>
-	</div>
+	<nav-panel></nav-panel>
 	<p>I am a software developer basic in Vancouver, British Columbia, primarily interested in the health technology field.	</p>
 	<p>Health is a passion of mine, and I believe in promoting both physical and mental well being. My mission is to help empower people to live longer, healthier, and happier lives through technology.</p>
 	<p>It's an exciting time for the health industry, with emerging technologies allowing individuals to stay on top of their own health. With new technology, we can catch potential health issues earlier, and develop personalized treatments for everyone's unique health situation.</p>
