--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,3 @@
 <div class='container'>
-	<ul class='nav navbar-nav'>
-		<li id='about-link'><a href="/#/about"><span>About</span></a></li>
-		<li id='education-link'><a href="/#/education"><span>Education</span></a></li>
-		<li id='skills-link'><a href="/#/skills"><span>Skills</span></a></li>
-		<li id='contact-link'><a href="/#/contact"><span>Contact</span></a></li>
-	</ul>
+	<nav-panel></nav-panel>
 </div>
