--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel="stylesheet" href="/css/main.css">
-	
+
 	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.js"></script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -26,7 +26,7 @@
 	<div ng-view>
 
 	</div>
-	
-	<script src='/app.js'></script>
+
+	<script src='/js/app.js'></script>
 </body>
 </html>
