Updating education page. Removing getLogo function since it is called on every digest and code will still be easy to maintain by hardcoding logo locations

--- a/templates/education.html
+++ b/templates/education.html
@@ -5,7 +5,7 @@
             {{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
         </div>
         <div class="col-md-4">
-        	<img src="{{getLogo(course.school)}}" alt="{{course.school}}" height="42">
-        </div>                   
+        	<img src="{{course.school_logo}}" alt="{{course.school}}" height="42">
+        </div>
     </div>
 </div>
