Adding skills info

--- a/templates/education.html
+++ b/templates/education.html
@@ -1,7 +1,7 @@
 <div class='container'>
 	<nav-panel></nav-panel>
 
-	<div class="row">
+	<div class="row university">
 		<div class="col-md-6 col-md-offset-2 col-sm-8 col-sm-offset-0 col-xs-8">
 			<strong>University of Waterloo</strong> - Bachelor of Mathematics, Computer Science, Honours, Co-Operative Program
 		</div>
