--- a/templates/nav-panel.html
+++ b/templates/nav-panel.html
@@ -1,5 +1,7 @@
-<ul class='nav navbar-nav'>
-	<li ng-repeat="navlink in navlinks" ng-hide="{{isActive(navlink)}}" id="{{navlink.title}}-link">
-		<a href="/#{{navlink.path}}"><span>{{navlink.title}}</span></a>
-	</li>
-</ul>
+<nav>
+	<ul>
+		<li ng-repeat="navlink in navlinks" ng-hide="{{isActive(navlink)}}" id="{{navlink.title}}-link">
+			<a href="/#{{navlink.path}}"><span>{{navlink.title}}</span></a>
+		</li>
+	</ul>
+</nav>
