--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -6,27 +6,30 @@
 
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="/css/normalize.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
+	<link rel="stylesheet" href="/css/normalize.min.css">
+	<link rel="stylesheet" href="/css/main.css">
 
 	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.js"></script>
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<title>Christopher Crookes - Vancouver Based Web App Developer</title>
 </head>
 <body ng-app='app'>
-	<header>
-		<h1>Christopher Crookes</h1>
-		<p>Vancouver Based Web App Developer</p>
-	</header>
-	<div ng-view>
+	<div id="wrapper">
+		<header>
+			<h1>Christopher Crookes</h1>
+			<p>Vancouver Based Web App Developer</p>
+		</header>
+		<div ng-view id='pageView'>
 
+		</div>
+		<div id='footer'>
+		</div>
 	</div>
-
 	<script src='/js/app.js'></script>
 </body>
 </html>
