--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-<div id='aboutPage' class='container'>
+<div id='aboutPage' class='container viewPage'>
 	<nav-panel></nav-panel>
 	<p>I am a software developer basic in Vancouver, British Columbia, primarily interested in the health technology field.	</p>
 	<p>Health is a passion of mine, and I believe in promoting both physical and mental well being. My mission is to help empower people to live longer, healthier, and happier lives through technology.</p>
