--- a/templates/education.html
+++ b/templates/education.html
@@ -1,4 +1,4 @@
-<div id='educationPage' class='container'>
+<div id='educationPage' class='container viewPage'>
 	<nav-panel></nav-panel>
 
 	<div class="row university">
