--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-<div id='contactPage' class='container'>
+<div id='contactPage' class='container viewPage'>
 	<nav-panel></nav-panel>
 	<form ng-submit="submit(contactform)" name="contactform">
 		<div ng-class="{ 'has-error': contactform.inputname.$invalid && submitted }">
