--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,4 +1,4 @@
-<div id='skillsPage' class='container'>
+<div id='skillsPage' class='container viewPage'>
 	<nav-panel></nav-panel>
 	<div id='currentSkills'>
 		<h2>Currently Using</h2>
