--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,20 +1,17 @@
 <div id='contactPage' class='container viewPage'>
 	<nav-panel></nav-panel>
+	<h1>Contact Me</h1>
 	<form ng-submit="submit(contactform)" name="contactform">
 		<div ng-class="{ 'has-error': contactform.inputname.$invalid && submitted }">
-			<label for="inputName">Name</label>
-			<input ng-model="formData.inputName" type="text" id="inputName" name="inputName" placeholder="Please enter your name" required>
+			<label for="inputName">Name</label><br/>
+			<input ng-model="formData.inputName" type="text" id="inputName" name="inputName" placeholder="Your Name" required>
 		</div>
 		<div ng-class="{ 'has-error': contactform.inputEmail.$invalid && submitted }">
-			<label for="inputEmail">Email</label>
-			<input ng-model="formData.inputEmail" type="email" id="inputEmail" name="inputEmail" placeholder="Please enter your email address" required>
-		</div>
-		<div ng-class="{ 'has-error': contactform.inputSubject.$invalid && submitted }">
-			<label for="inputSubject">Subject</label>
-			<input ng-model="formData.inputSubject" type="text" id="inputSubject" name="inputSubject" placeholder="Email Subject" required>
+			<label for="inputEmail">Email Address</label><br/>
+			<input ng-model="formData.inputEmail" type="email" id="inputEmail" name="inputEmail" placeholder="Your Email Address" required>
 		</div>
 		<div ng-class="{ 'has-error': contactform.inputMessage.$invalid && submitted }">
-			<label for="inputMessage">Message</label>
+			<label for="inputMessage">Message</label><br/>
 			<textarea ng-model="formData.inputMessage" type="text" id="inputMessage" name="inputMessage" placeholder="Please enter your message..." required></textarea>
 		</div>
 		<div>
