--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,21 +1,23 @@
 <div id='skillsPage' class='container viewPage'>
 	<nav-panel></nav-panel>
-	<div id='currentSkills'>
+	<h1>Skills</h1>
+	<div id='currentSkills' class='skillsList'>
 		<h2>Currently Using</h2>
 		<ul ng-repeat="skill in skills | filter: {activity: 'Current'} | orderBy: 'name'">
 			<li>{{skill.name}}</li>
 		</ul>
 	</div>
-	<div id='recentSkills'>
+	<div id='recentSkills' class='skillsList'>
 		<h2>Recently Used</h2>
 		<ul ng-repeat="skill in skills | filter: {activity: 'Recent'} | orderBy: 'name'">
 			<li>{{skill.name}}</li>
 		</ul>
 	</div>
-	<div id='rustySkills'>
+	<div id='rustySkills' class='skillsList'>
 		<h2>Getting Rusty</h2>
 		<ul ng-repeat="skill in skills | filter: {activity: 'Rusty'} | orderBy: 'name'">
 			<li>{{skill.name}}</li>
 		</ul>
 	</div>
+	<div class='clear'></div>
 </div>
