--- a/css/main.styl
+++ b/css/main.styl
@@ -205,6 +205,15 @@ a:visited{
   font-weight: bold;
 }
 
+.skillsList{
+  float: left;
+  width: 33%;
+}
+
+div.clear{
+  clear: both;
+}
+
 @media only screen and (min-width: 480px) {
 
 }
