--- a/templates/nav-panel.html
+++ b/templates/nav-panel.html
@@ -1,5 +1,5 @@
 <nav>
-	<ul>
+	<ul class='clearfix'>
 		<li ng-repeat="navlink in navlinks" ng-hide="{{isActive(navlink)}}" id="{{navlink.title}}-link">
 			<a href="/#{{navlink.path}}"><span>{{navlink.title}}</span></a>
 		</li>
