Changing appearance of Education page

--- a/css/main.styl
+++ b/css/main.styl
@@ -159,6 +159,11 @@ a:visited{
   color: blue;
 }
 
+ul.noStyle{
+  list-style: none;
+  padding-left: 0;
+}
+
 //Set background colours for nav buttons
 #homePage, #Home-link a{
   background: homeColour;
@@ -178,6 +183,18 @@ a:visited{
 
 #Contact-link a{
   background: contactColour;
+}
+
+#educationPage h3{
+  margin-bottom: .3em;
+}
+
+#continuingEd{
+  padding-top: 1.5em;
+}
+
+#continuingEd a{
+  padding-left: 5px;
 }
 
 #contactPage input, #contactPage textarea{
