--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,6 +121,10 @@ a {
 a:visited {
   color: #00f;
 }
+ul.noStyle {
+  list-style: none;
+  padding-left: 0;
+}
 #homePage,
 #Home-link a {
   background: #800000;
@@ -136,6 +140,15 @@ a:visited {
 }
 #Contact-link a {
   background: #803a00;
+}
+#educationPage h3 {
+  margin-bottom: 0.3em;
+}
+#continuingEd {
+  padding-top: 1.5em;
+}
+#continuingEd a {
+  padding-left: 5px;
 }
 #contactPage input,
 #contactPage textarea {
