--- a/templates/education.html
+++ b/templates/education.html
@@ -1,22 +1,33 @@
 <div id='educationPage' class='container viewPage'>
 	<nav-panel></nav-panel>
-
+	<h1>Education</h1>
 	<div class="row university">
-		<div class="col-md-6 col-md-offset-2 col-sm-8 col-sm-offset-0 col-xs-8">
-			<strong>University of Waterloo</strong> - Bachelor of Mathematics, Computer Science, Honours, Co-Operative Program
-		</div>
-		<div class="col-md-4">
+		<div style='float:left; margin-right: 1em'>
 			<img src="/img/Uwaterloo_seal.gif" alt="University of Waterloo" height="42" width="42">
 		</div>
+		<div>
+			<h3>University of Waterloo</h3>
+			Bachelor of Mathematics, Computer Science, Honours, Co-Operative Program
+		</div>
 	</div>
-	<div id='continuingEd'>
+	<div id='continuingEd' class='clear'>
 		<h2>Continuing Education</h2>
-		<div ng-repeat="course in courses" class="row">
-			<div class="col-md-6 col-md-offset-2 col-sm-8 col-sm-offset-0 col-xs-8">
+		<h3><img src="/img/EdX.svg" alt="edx" height="42"></h3>
+		<div ng-repeat="course in courses | filter: {school: 'edx'}" class="row">
+			<div>
 				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
 			</div>
-			<div class="col-md-4">
-				<img src="{{course.school_logo}}" alt="{{course.school}}" height="42">
+		</div>
+		<h3><img src="/img/Coursera_logo.png" alt="Coursera" height="42"></h3>
+		<div ng-repeat="course in courses | filter: {school: 'coursera'}" class="row">
+			<div>
+				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
+			</div>
+		</div>
+		<h3><img src="/img/Udacity_Logo.svg" alt="Udacity" height="42"></h3>
+		<div ng-repeat="course in courses | filter: {school: 'udacity'}" class="row">
+			<div>
+				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
 			</div>
 		</div>
 	</div>
